skindir = $(pkgdatadir)/Skins/Default
skin_DATA = \
	balance.bmp \
	eq_ex.bmp \
	eqmain.bmp \
	main.bmp \
	monoster.bmp \
	nums_ex.bmp \
	pledit.bmp \
	posbar.bmp \
	shufrep.bmp \
	text.bmp \
	titlebar.bmp \
	volume.bmp \
	cbuttons.bmp \
	playpaus.bmp \
	pledit.txt \
	viscolor.txt \
	README

EXTRA_DIST = $(skin_DATA)
